<resources>
    <string name="app_name">FutoVote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="new_user">New user? </string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="matric_no">Matric No</string>
    <string name="todo">TODO</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="department">Department</string>
    <string name="already_have_an_account">Already have an account ? </string>
    <string name="firstname">Firstname</string>
</resources>