<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/futo_logo"
                android:contentDescription="@string/todo" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xlarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/matric_no"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/blue_grey_500"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textColor="@color/blue_grey_300"
                android:theme="@style/EditText.Grey" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/blue_grey_500"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:minHeight="48dp"
                android:singleLine="true"
                android:textColor="@color/blue_grey_300"
                android:theme="@style/EditText.Grey" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_middle" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:layout_marginTop="@dimen/spacing_medium"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:text="@string/forgot_password"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/blue_grey_400"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:background="@drawable/btn_rounded_green_300"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/blue_grey_900" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/new_user"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="#757575" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="#43A047"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>